--- a/index.html
+++ b/index.html
@@ -184,7 +184,7 @@ src="https://www.facebook.com/tr?id=828175812368127&ev=PageView&noscript=1"
                         <h5 class="destaque_plano_red"><s>Bônus: Hermenêutica para pregadores</s></h5>
                         <h5 class="destaque_plano_red"><s>Acesso vitalicío</s></h5>
                         <h5 class="destaque_plano_red"><s></s></h5>
-                        <button><a href="">QUERO O PLANO BÁSICO!</a></button>
+                        <button><a href="https://go.perfectpay.com.br/PPU38CNA2PE">QUERO O PLANO BÁSICO!</a></button>
                         <div><img src="/img/AINDA-DA-TEMPO-DE-LEVAR-A-MELHOR-OPCAO-1.png" alt=""></div>
                     </div>
                 </div>
@@ -208,7 +208,7 @@ src="https://www.facebook.com/tr?id=828175812368127&ev=PageView&noscript=1"
                         <h5>Bônus: Hermenêutica para pregadores</h5>
                         <h5>Bônus: os segredos do tabernáculoa</h5>
                         <h5>Acesso vitalicío</h5>
-                        <button><a href="">SIM, QUERO O PACOTE COMPLETO!</a></button>
+                        <button><a href="https://go.perfectpay.com.br/PPU38CNA2SE">SIM, QUERO O PACOTE COMPLETO!</a></button>
                         <p><b>APROVEITE AGORA:</b>VOCÊ NÃO VAI ENCONTRAR ESSE PREÇO DEPOIS.</p>
                     </div>
                 </div>
