--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
                 <h2>PREGUE SERMÕES IMPACTANTES NOS 4 EVANGELHOS</h2>
                 <h3>Tenha acesso há mais de 246 esboços de pregações prontos, com tema, introdução, tópico, sub-tópico e
                     conclusão, nos 4 evangelhos Bíblicos, para você estudar, pregar ou se inspirar..</h3>
-                <img src="./img/PROMOCAO-POR-TEMPO-LIMITADO-1.png" alt="">
+                <img src="./img/PROMOCAO-POR-TEMPO-LIMITADO-1.webp" alt="">
                 <h3 class="destaque_preco_red">DE <s>R$97,00</s></h3>
                 <h3>POR APENAS</h3>
                 <h3 class="destaque_preco_green">R$10</h3>
@@ -54,26 +54,26 @@
             </div>
 
             <div class="main">
-                <img class="border" src="/img/ENVIO-IMEDIATO-NO-WHATSAPP-1-576x1024.png" alt="">
+                <img class="border" src="/img/ENVIO-IMEDIATO-NO-WHATSAPP-1-576x1024.webp" alt="">
             </div>
             <div class=" main main2">
                 <h2>VEJA UM POUCO DO QUE VOCÊ VAI TER ACESSO:</h2>
                 <hr>
                 <div class="imagens">
-                    <img src="./img/86-Esbocos-de-pregacao-no-evangelho-de-Mateus.-1.png" alt="">
-                    <img src="./img/86-Esbocos-de-pregacao-no-evangelho-de-Mateus.-2.png" alt="">
-                    <img src="./img/86-Esbocos-de-pregacao-no-evangelho-de-Mateus.-3.png" alt="">
-                    <img src="./img/86-Esbocos-de-pregacao-no-evangelho-de-Mateus.png" alt="">
+                    <img src="./img/86-Esbocos-de-pregacao-no-evangelho-de-Mateus.-1.webp" alt="">
+                    <img src="./img/86-Esbocos-de-pregacao-no-evangelho-de-Mateus.-2.webp" alt="">
+                    <img src="./img/86-Esbocos-de-pregacao-no-evangelho-de-Mateus.-3.webp" alt="">
+                    <img src="./img/86-Esbocos-de-pregacao-no-evangelho-de-Mateus.webp" alt="">
                 </div>
             </div>
             <div class="main">
                 <h2>VEJA COMO É FACIL NOSSO PROCESSO DE COMPRA SEGURA:</h2>
                 <div class="processo_compra_img">
                     <div>
-                        <img src="/img/Design-sem-nome.png" alt="">
-                        <img src="/img/O-CONTUDO-CHEGA-IMEDIATAMENTE-NO-SEU-E-MAIL-E-NO-WHATSAPP.png" alt="">
-                        <img src="/img/3-1-1.png" alt="">
-                        <img src="/img/foto-perfil-linkedin-disponivel-para-trabalhar-moderno-verde-3.png" alt="">
+                        <img src="/img/Design-sem-nome.webp" alt="">
+                        <img src="/img/O-CONTUDO-CHEGA-IMEDIATAMENTE-NO-SEU-E-MAIL-E-NO-WHATSAPP.webp" alt="">
+                        <img src="/img/3-1-1.webp" alt="">
+                        <img src="/img/foto-perfil-linkedin-disponivel-para-trabalhar-moderno-verde-3.webp" alt="">
                         <hr>
                     </div>
                 </div>
@@ -81,9 +81,9 @@
             <div class="main">
                 <h2>VEJA UM EXEMPLO DO MATERIA QUE VOCÊ TERÁ ACESSO:</h2>
                 <div class="materia">
-                    <div><img src="/img/WhatsApp-Image-2023-10-02-at-10.19.00-3-724x1024.jpeg" alt=""></div>
-                    <div><img src="/img/WhatsApp-Image-2023-10-02-at-10.19.00-4-724x1024.jpeg" alt=""></div>
-                    <div><img src="/img/WhatsApp-Image-2023-10-02-at-10.25.47-724x1024.jpeg" alt=""></div>
+                    <div><img src="/img/WhatsApp-Image-2023-10-02-at-10.19.00-3-724x1024.webp" alt=""></div>
+                    <div><img src="/img/WhatsApp-Image-2023-10-02-at-10.19.00-4-724x1024.webp" alt=""></div>
+                    <div><img src="/img/WhatsApp-Image-2023-10-02-at-10.25.47-724x1024.webp" alt=""></div>
                 </div>
             </div>
             <div class="main main2">
@@ -114,22 +114,22 @@
                 <h2>Para Quem é o E-book com 246 Esboços nos 4 Evangelhos?</h2>
                 <div class="esboco">
                     <div class="esboco_item">
-                        <img src="/img/PASTORES-1-3.png" alt="">
+                        <img src="/img/PASTORES-1-3.webp" alt="">
                         <h5>PASTORES</h5>
                         <p>➡️Que Querem Aperfeiçoar ainda mais o ministério!</p>
                     </div>
                     <div class="esboco_item">
-                        <img src="/img/PREGADORES-1-3.png" alt="">
+                        <img src="/img/PREGADORES-1-3.webp" alt="">
                         <h5>PREGADORES</h5>
                         <p>➡️Que Querem Preparar os melhores sermões!</p>
                     </div>
                     <div class="esboco_item">
-                        <img src="/img/PROFESSORES-1-3.png" alt="">
+                        <img src="/img/PROFESSORES-1-3.webp" alt="">
                         <h5>PROFESSORES</h5>
                         <p>➡️Que Querem Mais Convicção na hora de lecionar!</p>
                     </div>
                     <div class="esboco_item">
-                        <img src="/img/LIDERES-1-3.png" alt="">
+                        <img src="/img/LIDERES-1-3.webp" alt="">
                         <h5>MEMBROS</h5>
                         <p>➡️Que querem ter embasamento bíblico para evangelizar.</p>
                     </div>
@@ -139,19 +139,19 @@
                 <h2>Veja o que nossos clientes estão falando do nosso produto:</h2>
                 <div class="clientes">
                     <div class="clientes_item">
-                        <img src="/img/356234051_118431991286259_9052006801372952277_n.jpg" alt="">
+                        <img src="/img/356234051_118431991286259_9052006801372952277_n.webp" alt="">
                         <h5>Pr: José Ribeiro</h5>
                         <p>Material maravilho de grande inspiração para nos homens e evangelista dos evangelho do nosso
                             Senhor Jesus.</p>
                     </div>
                     <div class="clientes_item">
-                        <img src="/img/jose-vitor-sampaio.jpg" alt="">
+                        <img src="/img/jose-vitor-sampaio.webp" alt="">
                         <h5>Regina de Sousa</h5>
                         <p>Simplismente uma fonte inesgotável de conhecimento, para nos ajudar a aprender cada vez mais
                             da palavra de Deus, parabéns pelos esboços.</p>
                     </div>
                     <div class="clientes_item">
-                        <img src="/img/362290626_144826145305420_2334760287956414244_n.jpg" alt="">
+                        <img src="/img/362290626_144826145305420_2334760287956414244_n.webp" alt="">
                         <h5>Wilker Silva</h5>
                         <p>Tenho todos os e-books do site, estão de parabéns pelos esboços , estou estudando e usando
                             aqui na igreja.</p>
@@ -165,13 +165,13 @@
                     <h5><span>Bônus-01</span></h5>
                     <h5 class="destaque_preco_red">Valor real: R$47</h5>
                     <h5 class="destaque_preco_green">Nessa Oferta: R$00</h5>
-                    <img src="/img/bonus1.png" alt="">
+                    <img src="/img/bonus1.webp" alt="">
                 </div>
                 <div class="bonus">
                     <h5><span>Bônus-02</span></h5>
                     <h5 class="destaque_preco_red">Valor real: R$37</h5>
                     <h5 class="destaque_preco_green">Nessa Oferta: R$00</h5>
-                    <img src="/img/bpnus2.png" alt="">
+                    <img src="/img/bpnus2.webp" alt="">
                 </div>
             </div>
             <div id="plano" class="promo">
@@ -201,7 +201,7 @@
                         <h5 class="destaque_plano_red"><s>Acesso vitalicío</s></h5>
                         <h5 class="destaque_plano_red"><s></s></h5>
                         <button><a href="https://go.perfectpay.com.br/PPU38CNA2PE">QUERO O PLANO BÁSICO!</a></button>
-                        <div><img src="/img/AINDA-DA-TEMPO-DE-LEVAR-A-MELHOR-OPCAO-1.png" alt=""></div>
+                        <div><img src="/img/AINDA-DA-TEMPO-DE-LEVAR-A-MELHOR-OPCAO-1.webp" alt=""></div>
                     </div>
                 </div>
                 <div class="plano_item destaque_amarelo">
@@ -212,7 +212,7 @@
                         <p>Ou <b>5X de R$:5,89</b></p>
                     </div>
                     <div>
-                        <div> <img src="/img/PROMOCAO-POR-TEMPO-LIMITADO-1.png" alt=""></div>
+                        <div> <img src="/img/PROMOCAO-POR-TEMPO-LIMITADO-1.webp" alt=""></div>
                         <h5>E-book 246 Coletânea 246 Esboços Nos 4 Evangelhos</h5>
                         <h5>E-book: 365 Esboços de sermões de Gênesis a Apocalipse</h5>
                         <h5>E-book: 50 Esboços de Sermões no Livro de Atos</h5>
@@ -239,7 +239,7 @@
                         <h2>Eu vou te dar 30 dias de garantia incondicional!</h2>
                     </div>
                     <div>
-                        <img src="/img/garantia-de-30-dias-ou-seu-dinheiro-de-volta.png" alt="">
+                        <img src="/img/garantia-de-30-dias-ou-seu-dinheiro-de-volta.webp" alt="">
                     </div>
                     <div>
                         <p>Com isso você terá tempo, até para fazer TODOS, e pedir o dinheiro de volta caso acredite que
