--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
                 <h2>PREGUE SERMÕES IMPACTANTES NOS 4 EVANGELHOS</h2>
                 <h3>Tenha acesso há mais de 246 esboços de pregações prontos, com tema, introdução, tópico, sub-tópico e
                     conclusão, nos 4 evangelhos Bíblicos, para você estudar, pregar ou se inspirar..</h3>
-                <img src="./img/PROMOCAO-POR-TEMPO-LIMITADO-1.png" alt="">
+                <img src="./img/PROMOCAO-POR-TEMPO-LIMITADO-1.webp" alt="">
                 <h3 class="destaque_preco_red">DE <s>R$97,00</s></h3>
                 <h3>POR APENAS</h3>
                 <h3 class="destaque_preco_green">R$10</h3>
