https://go.perfectpay.com.br/PPU38CNA2SE

--- a/index.html
+++ b/index.html
@@ -54,16 +54,16 @@
             </div>
 
             <div class="main">
-                <img class="border" src="/img/ENVIO-IMEDIATO-NO-WHATSAPP-1-576x1024.png" alt="">
+                <img class="border" src="/img/ENVIO-IMEDIATO-NO-WHATSAPP-1-576x1024.webp" alt="">
             </div>
             <div class=" main main2">
                 <h2>VEJA UM POUCO DO QUE VOCÊ VAI TER ACESSO:</h2>
                 <hr>
                 <div class="imagens">
-                    <img src="./img/86-Esbocos-de-pregacao-no-evangelho-de-Mateus.-1.png" alt="">
-                    <img src="./img/86-Esbocos-de-pregacao-no-evangelho-de-Mateus.-2.png" alt="">
-                    <img src="./img/86-Esbocos-de-pregacao-no-evangelho-de-Mateus.-3.png" alt="">
-                    <img src="./img/86-Esbocos-de-pregacao-no-evangelho-de-Mateus.png" alt="">
+                    <img src="./img/86-Esbocos-de-pregacao-no-evangelho-de-Mateus.-1.webp" alt="">
+                    <img src="./img/86-Esbocos-de-pregacao-no-evangelho-de-Mateus.-2.webp" alt="">
+                    <img src="./img/86-Esbocos-de-pregacao-no-evangelho-de-Mateus.-3.webp" alt="">
+                    <img src="./img/86-Esbocos-de-pregacao-no-evangelho-de-Mateus.webp" alt="">
                 </div>
             </div>
         </div>
