--- a/id-01/index.html
+++ b/id-01/index.html
@@ -41,7 +41,7 @@
         button {
             background-color: #4CAF50;
             /* Verde */
-            color: #000;
+            color: #f7f0f0;
             /* Preto */
             padding: 20px 40px;
             border: none;
