--- a/id-01/index.html
+++ b/id-01/index.html
@@ -127,9 +127,9 @@
         <div class="disclaimer">
             <p>Embora os resultados deste serviço tenham sido demonstrados e confirmados pelos nossos alunos, é crucial ressaltar que os resultados podem variar significativamente entre indivíduos, dependendo de fatores pessoais. As informações fornecidas neste site têm o propósito de oferecer conhecimento geral, sem garantir resultados específicos ou um prazo exato para sua obtenção. Qualquer resultado obtido será de total responsabilidade do cliente, e este produto/página não possui qualquer afiliação com o Tik Tok ADS.</p>
         </div>
-        <a href="politicas" style="color: black;">Política de Privacidade</a> —
-        <a href="termos.html" style="color: black;">Termos de Uso</a> —
-        <a href="aviso.html" style="color: black;">Aviso Legal</a>
+        <a href="politicas-d.html" style="color: black;">Política de Privacidade</a> —
+        <a href="termos-u.html" style="color: black;">Termos de Uso</a> —
+        <a href="aviso-legal.html" style="color: black;">Aviso Legal</a>
         <p style="color: #333;">Atendimento através: alinesuelendasilvamartins@outlook.com</p>
         <p style="color: #333;">CPF: 001.284.552-33  // ©️ 2024 - Top Produtos Online. Todos os direitos reservados</p>
     </div>
