--- a/id-01/index.html
+++ b/id-01/index.html
@@ -127,7 +127,7 @@
         <div class="disclaimer">
             <p>Embora os resultados deste serviço tenham sido demonstrados e confirmados pelos nossos alunos, é crucial ressaltar que os resultados podem variar significativamente entre indivíduos, dependendo de fatores pessoais. As informações fornecidas neste site têm o propósito de oferecer conhecimento geral, sem garantir resultados específicos ou um prazo exato para sua obtenção. Qualquer resultado obtido será de total responsabilidade do cliente, e este produto/página não possui qualquer afiliação com o Tik Tok ADS.</p>
         </div>
-        <a href="id1/politicas-d.html" style="color: black;">Política de Privacidade</a> —
+        <a href=".id1/politicas-d.html" style="color: black;">Política de Privacidade</a> —
         <a href="termos-u.html" style="color: black;">Termos de Uso</a> —
         <a href="aviso-legal.html" style="color: black;">Aviso Legal</a>
         <p style="color: #333;">Atendimento através: alinesuelendasilvamartins@outlook.com</p>
