--- a/id-01/avisos.html
+++ b/id-01/avisos.html
@@ -27,7 +27,7 @@
     </style>
 </head>
 <body>
-    <h2>Política de Privacidade</h2>
+    <h2>Aviso Legal</h2>
     <p>A sua privacidade é importante para nós. É política do Mais Afiliado respeitar a sua privacidade em relação a qualquer informação sua que possamos coletar no site e outros sites que possuímos e operamos.</p>
     <p>Solicitamos informações pessoais apenas quando realmente precisamos delas para lhe fornecer um serviço. Fazemo-lo por meios justos e legais, com o seu conhecimento e consentimento. Também informamos por que estamos coletando e como será usado.</p>
     <p>Apenas retemos as informações coletadas pelo tempo necessário para fornecer o serviço solicitado. Quando armazenamos dados, protegemos dentro de meios comercialmente aceitáveis ​​para evitar perdas e roubos, bem como acesso, divulgação, cópia, uso ou modificação não autorizados.</p>
