--- a/id-01/index.html
+++ b/id-01/index.html
@@ -121,7 +121,7 @@
 <body>
     <!-- Botão verde no meio da página com seta -->
     <div class="flex">
-        <button onclick="window.location.href = '';"><span class="seta">»</span> <span class="botao-texto">Clique aqui e vá para o site de destino!</span></button>
+        <button onclick="window.location.href = 'google.com'><span class="seta">»</span> <span class="botao-texto">Clique aqui e vá para o site de destino!</span></button>
     </div>
     <div class="rodape">
         <div class="disclaimer">
