--- a/id-02/index.html
+++ b/id-02/index.html
@@ -121,17 +121,17 @@
 <body>
     <!-- Botão verde no meio da página com seta -->
     <div class="flex">
-        <button onclick="window.location.href = '';"><span class="seta">»</span> <span class="botao-texto">Clique aqui e vá para o site de destino!</span></button>
+        <button onclick="window.location.href = 'https://www.belezaelar.tech/products/%F0%9F%9A%9Bbrinquedo-caminhao-scania-de-controle-remoto-carreta-de-brinde?utm_source=copyToPasteBoard&utm_medium=product-links&utm_content=web' "><span class="seta">»</span> <span class="botao-texto">Clique aqui e vá para o site de destino!</span></button>
     </div>
     <div class="rodape">
         <div class="disclaimer">
             <p>Embora os resultados deste serviço tenham sido demonstrados e confirmados pelos nossos alunos, é crucial ressaltar que os resultados podem variar significativamente entre indivíduos, dependendo de fatores pessoais. As informações fornecidas neste site têm o propósito de oferecer conhecimento geral, sem garantir resultados específicos ou um prazo exato para sua obtenção. Qualquer resultado obtido será de total responsabilidade do cliente, e este produto/página não possui qualquer afiliação com o Tik Tok ADS.</p>
         </div>
-        <a href="./politicas.html" style="color: black;">Política de Privacidade</a> —
-        <a href="./termos.html" style="color: black;">Termos de Uso</a> —
-        <a href="./aviso.html" style="color: black;">Aviso Legal</a>
-        <p style="color: #333;">Atendimento através: rodrigo.g@maisafiliados.com.br</p>
-        <p style="color: #333;">CNPJ: 50.239.773/0001-01 // ©️ 2023 - Mais Afiliado. Todos os direitos reservados</p>
+        <a href="/id-01/politicas.html" style="color: black;">Política de Privacidade</a> —
+        <a href="/id-01/termos.html" style="color: black;">Termos de Uso</a> —
+        <a href="/id-01/avisos.html" style="color: black;">Aviso Legal</a>
+        <p style="color: #333;">Atendimento através: alinesuelendasilvamartins@outlook.com</p>
+        <p style="color: #333;">CPF: 001.284.552-33  // ©️ 2024 - Top Produtos Online. Todos os direitos reservados</p>
     </div>
 </body>
 </html>
