--- a/id-02/index.html
+++ b/id-02/index.html
@@ -130,8 +130,8 @@
         <a href="/id-01/politicas.html" style="color: black;">Política de Privacidade</a> —
         <a href="/id-01/termos.html" style="color: black;">Termos de Uso</a> —
         <a href="/id-01/avisos.html" style="color: black;">Aviso Legal</a>
-        <p style="color: #333;">Atendimento através: alinesuelendasilvamartins@outlook.com</p>
-        <p style="color: #333;">CPF: 001.284.552-33  // ©️ 2024 - Top Produtos Online. Todos os direitos reservados</p>
+        <p style="color: #333;">Atendimento através: rafaelduu.00011@outlook.com.br</p>
+        <p style="color: #333;">CPF: 954.911.551-87  // ©️ 2024 - Top Produtos Online. Todos os direitos reservados</p>
     </div>
 </body>
 </html>
