--- a/id-03/index.html
+++ b/id-03/index.html
@@ -121,7 +121,7 @@
 <body>
     <!-- Botão verde no meio da página com seta -->
     <div class="flex">
-        <button onclick="window.location.href = 'https://www.belezaelar.tech/products/%F0%9F%9A%9Bbrinquedo-caminhao-scania-de-controle-remoto-carreta-de-brinde?utm_source=copyToPasteBoard&utm_medium=product-links&utm_content=web' "><span class="seta">»</span> <span class="botao-texto">Clique aqui e vá para o site de destino!</span></button>
+        <button onclick="window.location.href = 'https://www.belezaelar.tech/products/%F0%9F%9A%9A%F0%9F%9A%9A%F0%9F%9A%9A-brinquedo-caminhao-scania-de-controle-remoto-carreta-de-brinde?_pos=4&_sid=5a8144bd4&_ss=r' "><span class="seta">»</span> <span class="botao-texto">Clique aqui e vá para o site de destino!</span></button>
     </div>
     <div class="rodape">
         <div class="disclaimer">
