--- a/wzi-3/index.html
+++ b/wzi-3/index.html
@@ -127,11 +127,11 @@
         <div class="disclaimer">
             <p>Embora os resultados deste serviço tenham sido demonstrados e confirmados pelos nossos alunos, é crucial ressaltar que os resultados podem variar significativamente entre indivíduos, dependendo de fatores pessoais. As informações fornecidas neste site têm o propósito de oferecer conhecimento geral, sem garantir resultados específicos ou um prazo exato para sua obtenção. Qualquer resultado obtido será de total responsabilidade do cliente, e este produto/página não possui qualquer afiliação com o Tik Tok ADS.</p>
         </div>
-        <a href="/id-01/politicas.html" style="color: black;">Política de Privacidade</a> —
-        <a href="/id-01/termos.html" style="color: black;">Termos de Uso</a> —
-        <a href="/id-01/avisos.html" style="color: black;">Aviso Legal</a>
-        <p style="color: #333;">Atendimento através: alinesuelendasilvamartins@outlook.com</p>
-        <p style="color: #333;">CPF: 001.284.552-33  // ©️ 2024 - Top Produtos Online. Todos os direitos reservados</p>
+        <a href="/wzi-3/politicas.html" style="color: black;">Política de Privacidade</a> —
+        <a href="/wzi-3/termos.html" style="color: black;">Termos de Uso</a> —
+        <a href="/wzi-3/avisos.html" style="color: black;">Aviso Legal</a>
+        <p style="color: #333;">Atendimento através: contato@meuonlyfans.com</p>
+        <p style="color: #333;">CNPJ: 16.956.848/0001-29 // ©️ 2024 - Meu Only. Todos os direitos reservados</p>
     </div>
 </body>
 </html>
