--- a/wzi-3/index.html
+++ b/wzi-3/index.html
@@ -48,9 +48,9 @@
             border-radius: 10px;
             /* Borda arredondada */
             cursor: pointer;
-            font-family: "Comic Sans MS", cursive;
+            font-family: "Comic Sans MS";
             margin-bottom: 20px; /* Espaço abaixo do botão */
-            animation: blink 1s infinite; /* Animação de piscar */
+            animation: blink 5s infinite; /* Animação de piscar */
         }
 
         @keyframes blink {
