--- a/wzi-3/index.html
+++ b/wzi-3/index.html
@@ -75,7 +75,7 @@
 
         /* Estilizando as tags <p> e aplicando a fonte em toda a página */
         p, body {
-            font-family: "Comic Sans MS", cursive;
+            font-family: "Comic Sans MS";
             font-size: 18px;
             margin: 10px 0;
             color: #333; /* Cor de texto cinza escuro */
