--- a/wzi-3/termos.html
+++ b/wzi-3/termos.html
@@ -6,16 +6,16 @@
     <title>Termos de Uso</title>
     <style>
         body {
-            font-family: "Comic Sans MS", cursive;
+            font-family: "Comic Sans MS";
         }
 
         h2, h3 {
-            font-family: "Comic Sans MS", cursive;
+            font-family: "Comic Sans MS";
             color: rgb(68, 68, 68);
         }
 
         p, li {
-            font-family: "Comic Sans MS", cursive;
+            font-family: "Comic Sans MS";
             color: rgb(68, 68, 68);
         }
     </style>
