--- a/wzi-3/avisos.html
+++ b/wzi-3/avisos.html
@@ -5,7 +5,7 @@
     <title>Aviso Legal</title>
     <style>
         body {
-            font-family: "Comic Sans MS", cursive;
+            font-family: "Comic Sans MS";
         }
         h2 {
             color: rgb(68, 68, 68);
