--- a/lumina-part/index.html
+++ b/lumina-part/index.html
@@ -127,9 +127,9 @@
         <div class="disclaimer">
             <p>Embora os resultados deste serviço tenham sido demonstrados e confirmados pelos nossos alunos, é crucial ressaltar que os resultados podem variar significativamente entre indivíduos, dependendo de fatores pessoais. As informações fornecidas neste site têm o propósito de oferecer conhecimento geral, sem garantir resultados específicos ou um prazo exato para sua obtenção. Qualquer resultado obtido será de total responsabilidade do cliente, e este produto/página não possui qualquer afiliação com o Tik Tok ADS.</p>
         </div>
-        <a href="/wzi-3/politicas.html" style="color: black;">Política de Privacidade</a> —
-        <a href="/wzi-3/termos.html" style="color: black;">Termos de Uso</a> —
-        <a href="/wzi-3/avisos.html" style="color: black;">Aviso Legal</a>
+        <a href="/lumina-part/politicas.html" style="color: black;">Política de Privacidade</a> —
+        <a href="/lumina-part/termos.html" style="color: black;">Termos de Uso</a> —
+        <a href="/lumina-part/avisos.html" style="color: black;">Aviso Legal</a>
         <p style="color: #333;">Atendimento através: contato@produtosaprovados.shop</p>
         <p style="color: #333;">CNPJ: 69.183.176/0001-22 // ©️ 2024 - Lumina Part. Todos os direitos reservados</p>
     </div>
