--- a/pp&s-part/index.html
+++ b/pp&s-part/index.html
@@ -33,7 +33,7 @@
     <link rel="stylesheet" href="seu-estilo.css">
     
     <!-- Favicon (ícone da aba do navegador) -->
-    <link rel="icon" href="./img/like.png">
+    <link rel="icon" href="img/like.png">
     
     <!-- Estilos CSS adicionais -->
     <style>
