--- a/pp&s-part/index.html
+++ b/pp&s-part/index.html
@@ -33,7 +33,7 @@
     <link rel="stylesheet" href="seu-estilo.css">
     
     <!-- Favicon (ícone da aba do navegador) -->
-    <link rel="icon" href="img/like.png">
+    <link rel="icon" href="./img/like.png">
     
     <!-- Estilos CSS adicionais -->
     <style>
@@ -131,7 +131,7 @@
         <a href="/pp&s-part/termos.html" style="color: black;">Termos de Uso</a> —
         <a href="/pp&s-part/avisos.html" style="color: black;">Aviso Legal</a>
         <p style="color: #333;">Atendimento através: contato@meustreinamentos.site</p>
-        <p style="color: #333;">CNPJ: 29.294.103/0001-93 // ©️ 2024 - pp&s part. Todos os direitos reservados</p>
+        <p style="color: #333;">CNPJ: 29.294.103/0001-93 // ©️ 2024 - PP&S Part. Todos os direitos reservados</p>
     </div>
 </body>
 </html>
