--- a/pp&s-part/index.html
+++ b/pp&s-part/index.html
@@ -33,7 +33,7 @@
     <link rel="stylesheet" href="seu-estilo.css">
     
     <!-- Favicon (ícone da aba do navegador) -->
-    <link rel="icon" href="./img/like.png">
+    <link rel="icon" href="">
     
     <!-- Estilos CSS adicionais -->
     <style>
@@ -121,7 +121,7 @@
 <body>
     <!-- Botão verde no meio da página com seta -->
     <div class="flex">
-        <button onclick="window.location.href = '' "><span class="seta">»</span> <span class="botao-texto">Clique aqui e vá para o site de destino!</span></button>
+        <button onclick="window.location.href = '' "><span class="seta">»</span> <span class="botao-texto">Clique Aqui e Me Chame no WhatsApp 👈👈</span></button>
     </div>
     <div class="rodape">
         <div class="disclaimer">
