--- a/lumina-part/index.html
+++ b/lumina-part/index.html
@@ -121,7 +121,7 @@
 <body>
     <!-- Botão verde no meio da página com seta -->
     <div class="flex">
-        <button onclick="window.location.href = '' "><span class="seta">»</span> <span class="botao-texto">Para Acessar o Site, Clique Aqui 👈👈</span></button>
+        <button onclick="window.location.href = 'https://www.belezaelar.tech/products/%F0%9F%9A%9B%F0%9F%9A%9Bbrinquedo-caminhao-scania-de-controle-remoto-carreta-de-brinde-1?utm_source=copyToPasteBoard&utm_medium=product-links&utm_content=web' "><span class="seta">»</span> <span class="botao-texto">Para Acessar o Site, Clique Aqui 👈👈</span></button>
     </div>
     <div class="rodape">
         <div class="disclaimer">
