--- a/vista-aleg/index.html
+++ b/vista-aleg/index.html
@@ -121,7 +121,7 @@
 <body>
     <!-- Botão verde no meio da página com seta -->
     <div class="flex">
-        <button onclick="window.location.href = '' "><span class="seta">»</span> <span class="botao-texto">Clique Aqui e Me Chame no WhatsApp 👈👈</span></button>
+        <button onclick="window.location.href = '' "><span class="seta">»</span> <span class="botao-texto">Clique Aqui 👈👈</span></button>
     </div>
     <div class="rodape">
         <div class="disclaimer">
