--- a/karyna-f/index.html
+++ b/karyna-f/index.html
@@ -127,11 +127,11 @@
         <div class="disclaimer">
             <p>Embora os resultados deste serviço tenham sido demonstrados e confirmados pelos nossos alunos, é crucial ressaltar que os resultados podem variar significativamente entre indivíduos, dependendo de fatores pessoais. As informações fornecidas neste site têm o propósito de oferecer conhecimento geral, sem garantir resultados específicos ou um prazo exato para sua obtenção. Qualquer resultado obtido será de total responsabilidade do cliente, e este produto/página não possui qualquer afiliação com o Tik Tok ADS.</p>
         </div>
-        <a href="/housi-s/politicas.html" style="color: black;">Política de Privacidade</a> —
-        <a href="/housi-s/termos.html" style="color: black;">Termos de Uso</a> —
-        <a href="/housi-s/avisos.html" style="color: black;">Aviso Legal</a>
-        <p style="color: #333;">Atendimento através: contato@geradordevotos.info</p>
-        <p style="color: #333;">CNPJ: 15.675.715/0001-11 // ©️ 2024 - Housi S.A. Todos os direitos reservados</p>
+        <a href="/karyna-f/politicas.html" style="color: black;">Política de Privacidade</a> —
+        <a href="/karyna-f/termos.html" style="color: black;">Termos de Uso</a> —
+        <a href="/karyna-f/avisos.html" style="color: black;">Aviso Legal</a>
+        <p style="color: #333;">Atendimento através: contato@minhabelezaelar.shop </p>
+        <p style="color: #333;">CNPJ: 12.270.190/0001-46 // ©️ 2024 - KARYNA FERRARI BICUDO AGRICOLA Todos os direitos reservados</p>
     </div>
 </body>
 </html>
