--- a/karyna-f/politicas.html
+++ b/karyna-f/politicas.html
@@ -25,7 +25,7 @@
     <h2>Política Privacidade</h2>
     <p>A sua privacidade é importante para nós. É política do respeitar a sua
         privacidade em relação a qualquer informação sua que possamos coletar no site <a
-            href="https://geradordevotos.info/"></a>, e outros sites que possuímos e operamos.</p>
+            href="https://minhabelezaelar.shop/"></a>, e outros sites que possuímos e operamos.</p>
     <p>Solicitamos informações pessoais apenas quando realmente precisamos delas para
         lhe fornecer um serviço. Fazemo-lo por meios justos e legais, com o seu conhecimento e consentimento. Também
         informamos por que estamos coletando e como será usado.</p>
