--- a/karyna-f/termos.html
+++ b/karyna-f/termos.html
@@ -23,7 +23,7 @@
 
 <body>
     <h2>1. Termos</h2>
-    <p>Ao acessar ao site <a href="https://geradordevotos.info/housi-s"></a>, concorda em cumprir estes termos de serviço, todas as leis e regulamentos aplicáveis ​​e concorda que é responsável pelo cumprimento de todas as leis locais aplicáveis. Se você não concordar com algum desses termos, está proibido de usar ou acessar este site. Os materiais contidos neste site são protegidos pelas leis de direitos autorais e marcas comerciais aplicáveis.</p>
+    <p>Ao acessar ao site <a href="https://minhabelezaelar.shop/karyna-f"></a>, concorda em cumprir estes termos de serviço, todas as leis e regulamentos aplicáveis ​​e concorda que é responsável pelo cumprimento de todas as leis locais aplicáveis. Se você não concordar com algum desses termos, está proibido de usar ou acessar este site. Os materiais contidos neste site são protegidos pelas leis de direitos autorais e marcas comerciais aplicáveis.</p>
     <h2>2. Uso de Licença</h2>
     <p>É concedida permissão para baixar temporariamente uma cópia dos materiais (informações ou software) no site , apenas para visualização transitória pessoal e não comercial. Esta é a concessão de uma licença, não uma transferência de título e, sob esta licença, você não pode:&nbsp;</p>
     <ol>
