--- a/karyna-f/index.html
+++ b/karyna-f/index.html
@@ -131,7 +131,8 @@
         <a href="/karyna-f/termos.html" style="color: black;">Termos de Uso</a> —
         <a href="/karyna-f/avisos.html" style="color: black;">Aviso Legal</a>
         <p style="color: #333;">Atendimento através: contato@minhabelezaelar.shop </p>
-        <p style="color: #333;">CNPJ: 12.270.190/0001-46 // ©️ 2024 - FREE CRED AGRICOLA LTDA Todos os direitos reservados</p>
+        <p style="color: #333;">CNPJ: 12.270.190/0001-46 // ©️ 2024 - FREE CRED AGRICOLA LTDA</p> 
+    <p>Todos os direitos reservados</p>
     </div>
 </body>
 </html>
