--- a/housi-s/index.html
+++ b/housi-s/index.html
@@ -131,7 +131,8 @@
         <a href="/housi-s/termos.html" style="color: black;">Termos de Uso</a> —
         <a href="/housi-s/avisos.html" style="color: black;">Aviso Legal</a>
         <p style="color: #333;">Atendimento através: contato@geradordevotos.info</p>
-        <p style="color: #333;">CNPJ: 15.675.715/0001-11 // ©️ 2024 - Housi S.A. Todos os direitos reservados</p>
+        <p style="color: #333;">CNPJ: 15.675.715/0001-11 // ©️ 2024 - Housi S.A.</p> 
+    <p>Todos os direitos reservados</p>
     </div>
 </body>
 </html>
