--- a/confeitaria-sucesso/index.html
+++ b/confeitaria-sucesso/index.html
@@ -1775,27 +1775,27 @@ src="https://www.facebook.com/tr?id=848970143641364&ev=PageView&noscript=1"
                                 <ul class="elementor-icon-list-items">
                                     <li class="elementor-icon-list-item">
                                         <span class="elementor-icon-list-icon">
-													</span>
+							<i aria-hidden="true" class="fas fa-arrow-circle-right"></i>						</span>
                                         <span class="elementor-icon-list-text">Pão de Ló</span>
                                     </li>
                                     <li class="elementor-icon-list-item">
                                         <span class="elementor-icon-list-icon">
-													</span>
+							<i aria-hidden="true" class="fas fa-arrow-circle-right"></i>						</span>
                                         <span class="elementor-icon-list-text">Massa Chiffon</span>
                                     </li>
                                     <li class="elementor-icon-list-item">
                                         <span class="elementor-icon-list-icon">
-													</span>
+							<i aria-hidden="true" class="fas fa-arrow-circle-right"></i>						</span>
                                         <span class="elementor-icon-list-text">Massa Gênoise</span>
                                     </li>
                                     <li class="elementor-icon-list-item">
                                         <span class="elementor-icon-list-icon">
-													</span>
+							<i aria-hidden="true" class="fas fa-arrow-circle-right"></i>						</span>
                                         <span class="elementor-icon-list-text">Massa Amanteigada</span>
                                     </li>
                                     <li class="elementor-icon-list-item">
                                         <span class="elementor-icon-list-icon">
-													</span>
+							<i aria-hidden="true" class="fas fa-arrow-circle-right"></i>						</span>
                                         <span class="elementor-icon-list-text">Massa de Brownie</span>
                                     </li>
                                     <li class="elementor-icon-list-item">
@@ -1837,29 +1837,32 @@ src="https://www.facebook.com/tr?id=848970143641364&ev=PageView&noscript=1"
                                 <ul class="elementor-icon-list-items">
                                     <li class="elementor-icon-list-item">
                                         <span class="elementor-icon-list-icon">
+							<i aria-hidden="true" class="fas fa-arrow-circle-right"></i>						</span>
                                         <span class="elementor-icon-list-text">Recheio Trufado</span>
                                     </li>
                                     <li class="elementor-icon-list-item">
                                         <span class="elementor-icon-list-icon">
-												</span>
+							<i aria-hidden="true" class="fas fa-arrow-circle-right"></i>						</span>
                                         <span class="elementor-icon-list-text">Recheio Gourmet</span>
                                     </li>
                                     <li class="elementor-icon-list-item">
                                         <span class="elementor-icon-list-icon">
-													</span>
+							<i aria-hidden="true" class="fas fa-arrow-circle-right"></i>						</span>
                                         <span class="elementor-icon-list-text">Recheio Cítrico</span>
                                     </li>
                                     <li class="elementor-icon-list-item">
                                         <span class="elementor-icon-list-icon">
+							<i aria-hidden="true" class="fas fa-arrow-circle-right"></i>						</span>
                                         <span class="elementor-icon-list-text">Recheio de Frutas</span>
                                     </li>
                                     <li class="elementor-icon-list-item">
                                         <span class="elementor-icon-list-icon">
+							<i aria-hidden="true" class="fas fa-arrow-circle-right"></i>						</span>
                                         <span class="elementor-icon-list-text">Recheio tradicionais</span>
                                     </li>
                                     <li class="elementor-icon-list-item">
                                         <span class="elementor-icon-list-icon">
-													</span>
+							<i aria-hidden="true" class="fas fa-arrow-circle-right"></i>						</span>
                                         <span class="elementor-icon-list-text">Ganaches especiais</span>
                                     </li>
                                     <li class="elementor-icon-list-item">
@@ -1908,17 +1911,17 @@ src="https://www.facebook.com/tr?id=848970143641364&ev=PageView&noscript=1"
                                 <ul class="elementor-icon-list-items">
                                     <li class="elementor-icon-list-item">
                                         <span class="elementor-icon-list-icon">
-													</span>
+							<i aria-hidden="true" class="fas fa-arrow-circle-right"></i>						</span>
                                         <span class="elementor-icon-list-text">Cobertura Trufada</span>
                                     </li>
                                     <li class="elementor-icon-list-item">
                                         <span class="elementor-icon-list-icon">
-													</span>
+							<i aria-hidden="true" class="fas fa-arrow-circle-right"></i>						</span>
                                         <span class="elementor-icon-list-text">Cobertura Gourmet</span>
                                     </li>
                                     <li class="elementor-icon-list-item">
                                         <span class="elementor-icon-list-icon">
-													</span>
+							<i aria-hidden="true" class="fas fa-arrow-circle-right"></i>						</span>
                                         <span class="elementor-icon-list-text">Cobertura de Ganache</span>
                                     </li>
                                     <li class="elementor-icon-list-item">
@@ -3125,13 +3128,7 @@ src="https://www.facebook.com/tr?id=848970143641364&ev=PageView&noscript=1"
                     <div class="elementor-element elementor-element-317f50c elementor-view-stacked elementor-widget-mobile__width-auto elementor-fixed elementor-shape-circle elementor-widget elementor-widget-icon"
                         data-id="317f50c" data-element_type="widget"
                         data-settings="{&quot;_position&quot;:&quot;fixed&quot;}" data-widget_type="icon.default">
-                        <div class="elementor-widget-container">
-                            
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
+                       
     </section>
     </div>
 
